
add_subdirectory("Example 4.01")
add_subdirectory("Example 4.02")
add_subdirectory("Example 4.03")
add_subdirectory("Example 4.04")
add_subdirectory("Example 4.05")
add_subdirectory("Example 4.06")
add_subdirectory("Example 4.07")
add_subdirectory("Example 4.08")
add_subdirectory("Example 4.09")
add_subdirectory("Example 4.10")
add_subdirectory("Example 4.11")
add_subdirectory("Example 4.12")
add_subdirectory("Example 4.13")
add_subdirectory("Example 4.14")


set_property(TARGET Example_401 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_402 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_403 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_404 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_405 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_405 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_406 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_407 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_408 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_406 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_409 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_410 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_411 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_412 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_413 PROPERTY FOLDER "Chapter 04")
set_property(TARGET Example_414 PROPERTY FOLDER "Chapter 04")