add_subdirectory("Example 5.01")
add_subdirectory("Example 5.02")
add_subdirectory("Example 5.03")
add_subdirectory("Example 5.04")
add_subdirectory("Example 5.05")
add_subdirectory("Example 5.06")
add_subdirectory("Example 5.07")
add_subdirectory("Example 5.08")
add_subdirectory("Example 5.09")
add_subdirectory("Example 5.10")


set_property(TARGET Example_501 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_502 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_503 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_504 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_505 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_505 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_506 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_507 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_508 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_506 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_509 PROPERTY FOLDER "Chapter 05")
set_property(TARGET Example_510 PROPERTY FOLDER "Chapter 05")
