
add_subdirectory("Example 12.01")
add_subdirectory("Example 12.02")
add_subdirectory("Example 12.03")
add_subdirectory("Example 12.04")

set_property(TARGET Example_1201 PROPERTY FOLDER "Chapter 12")
set_property(TARGET Example_1202 PROPERTY FOLDER "Chapter 12")
set_property(TARGET Example_1203 PROPERTY FOLDER "Chapter 12")
set_property(TARGET Example_1204 PROPERTY FOLDER "Chapter 12")
